--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,6 @@
         android:layout_marginTop="90dp">
 
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -178,6 +177,90 @@
             android:layout_height="0.5dp"
             android:background="#a9b0c3"
             android:layout_marginTop="10dp"
+            />
+
+        <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="EMAIL"
+            android:inputType="textPersonName"
+            android:textColorHint="#C16B09"
+            android:textSize="13dp"
+            android:background="#00000000"
+            android:layout_marginTop="42dp"
+
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#C16B09"
+            android:layout_marginTop="10dp"
+
+            />
+
+        <EditText
+            android:id="@+id/etTTL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="TEMPAT, TANGGAL LAHIR"
+            android:inputType="textPersonName"
+            android:textColorHint="#C16B09"
+            android:textSize="13dp"
+            android:background="#00000000"
+            android:layout_marginTop="42dp"
+
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#C16B09"
+            android:layout_marginTop="10dp"
+
+            />
+
+        <EditText
+            android:id="@+id/etNohp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="NO HP"
+            android:inputType="textPersonName"
+            android:textColorHint="#C16B09"
+            android:textSize="13dp"
+            android:background="#00000000"
+            android:layout_marginTop="42dp"
+
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#C16B09"
+            android:layout_marginTop="10dp"
+
+            />
+
+        <EditText
+            android:id="@+id/etAlamat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Alamat"
+            android:inputType="textPersonName"
+            android:textColorHint="#C16B09"
+            android:textSize="13dp"
+            android:background="#00000000"
+            android:layout_marginTop="42dp"
+
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#C16B09"
+            android:layout_marginTop="10dp"
+
             />
 
 
