tambahan list konselor

--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.appsnipp.education.MainActivity">
+    tools:context="com.proyek.ibf.MainActivity">
 
 
     <include layout="@layout/content_main" />
