--- a/app/src/main/res/layout/activity_list_dokter.xml
+++ b/app/src/main/res/layout/activity_list_dokter.xml
@@ -14,8 +14,7 @@
             android:id="@+id/dokterlist"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="10dp"
-            android:layout_marginTop="15dp"/>
+            android:padding="10dp"/>
 
     </LinearLayout>
 </ScrollView>
