--- a/app/src/main/res/layout/artikel_item.xml
+++ b/app/src/main/res/layout/artikel_item.xml
@@ -1,40 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="5dp">
-    <ImageView
-        android:id="@+id/ivFotoArtikel"
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_marginHorizontal="10dp"
-        android:scaleType="fitXY"
-        android:src="@mipmap/ic_launcher"/>
-    <TextView
-        android:id="@+id/tvJudul"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="10dp"
-        android:textColor="@android:color/black"
-        android:text="Judul Artikel"/>
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
+
     <LinearLayout
-        android:layout_marginHorizontal="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/tvTglArtikel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sabtu, 12 Maret 2018."/>
-        <TextView
-            android:id="@+id/tvPenulis"
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/ivFotoArtikel"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_marginHorizontal="10dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:text="Oleh : Adam Kurnia"/>
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvTglArtikel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sabtu, 12 Maret 2018." />
+
+            <TextView
+                android:id="@+id/tvPenulis"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:text="Oleh : Adam Kurnia" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvJudul"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp"
+            android:text="Judul Artikel"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
     </LinearLayout>
-</LinearLayout>
+</android.support.v7.widget.CardView>
